# picture_cloud_kernel

./: Cargo.toml
application/: Cargo.toml
application/src/ability/: mod.rs
application/src/ability/classify/: mod.rs
application/src/ability/tag/: mod.rs  tag_create_ability.rs  tag_delete_ability.rs  tag_update_ability.rs
application/src/ability/tag/cmd/: mod.rs  tag_create_cmd.rs  tag_delete_cmd.rs  tag_update_cmd.rs
application/src/command/: itag_service.rs  mod.rs
application/src/command/service/: tag_service.rs
application/src/query/: mod.rs
application/src/query/model/tag/dto/: mod.rs
application/src/query/repository/: mod.rs  tag_cqrs_repository.rs
application/src/query/service/: mod.rs  tag_cqrs_service.rs
application/tests/: prepare.rs
application/tests/ability/tag/: mod.rs  tag_create_ability_test.rs  tag_delete_ability_test.rs
base/src/: lib.rs
base/src/ddd/: ability.rs  repository.rs
base/src/event/: domain_event_publisher.rs  domain_event_repository.rs  eventx.rs  mod.rs
base/src/jsonx/: json.rs
common/: Cargo.toml
common/locales/: locale.csv  locale.json
common/src/: config.rs  contextx.rs  i18n.rs  log.rs  res.rs
domain/: Cargo.toml
domain/src/aggregate/: mod.rs  preclude.rs
infrastructure/: Cargo.toml
interaction/: Cargo.toml
interaction/src/: lib.rs
interaction/src/handle/: mod.rs  tag.rs
macrox/: Cargo.toml
macrox/src/: lib.rs  locale.rs
middlewarex/: Cargo.toml
middlewarex/src/: ctx.rs  lib.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  main.rs
(+22 files in other folders)
